# Murder-Will-Out

./: .gitignore  COMPLETE_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  PROBE_TRAINING_GUIDE.md  PROBE_WORKFLOW.md  README.md  appendix.tex  check_test_setup.py  data_preprocessing.py  evaluate_labelling.py  external_scoring.py  external_scoring_and_collect_acts_for_probing.py  generate_data_for_probe.py  generate_plots_standalone.py  greedy_answer_generation.py  knowledge_calculation.py  label_model_answers.py  many_answers_generation.py  paper.tex  plot_dev_knowledge.py  plot_hidden_knowledge.py  plot_per_relation_k_metrics.py  plot_probe_performance.py  pyproject.toml  score_dev_with_probe.py  score_test_internal_only.py  score_test_with_probe.py  test_external_scoring.py  train_linear_probe.py
